reactive-dapr-with-drasi/services/dashboard/k8s/signalr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: signalr-gateway
  namespace: drasi-system
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: drasi-system-signalr-stripprefix@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - path: /signalr
        pathType: Prefix
        backend:
          service:
            name: signalr-gateway
            port:
              number: 8080
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: signalr-stripprefix
  namespace: drasi-system
spec:
  stripPrefix:
    prefixes:
      - /signalr
